fixed vertical aligning problem

--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -20,4 +20,8 @@
   div {
     margin-top: 16px;
   }
+
+  p {
+    min-width: 330px;
+  }
 }
